--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,9 @@
     "Blog-app": {
       "projectType": "application",
       "schematics": {
+
         "@schematics/angular:component": {
+          "skipTests":true,
           "style": "scss"
         }
       },
